fix overflow X bug

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 html {
   font-size: 62.5%;
@@ -36,7 +36,7 @@ body {
   font-size: 2.6rem;
   line-height: 2;
   font-weight: 600;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 5.6rem;
